[gd_scene load_steps=7 format=3 uid="uid://bupvg6q3o1fxu"]

[ext_resource type="Script" path="res://Terms.gd" id="1_6sk50"]
[ext_resource type="Theme" uid="uid://bmmtsvfeox7bd" path="res://themes/edit_flashcards.tres" id="1_wa2kj"]
[ext_resource type="Script" path="res://edit_flashcards.gd" id="1_wxgos"]
[ext_resource type="Script" path="res://Definitions.gd" id="2_a2rjw"]
[ext_resource type="Script" path="res://Scripts/Study_terms.gd" id="2_bicyd"]
[ext_resource type="Script" path="res://new_set.gd" id="3_i27n6"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_wxgos")

[node name="Definitions" type="ItemList" parent="."]
offset_left = 576.0
offset_top = 32.0
offset_right = 1088.0
offset_bottom = 608.0
max_columns = 0
script = ExtResource("2_a2rjw")

[node name="Terms" type="ItemList" parent="."]
offset_left = 64.0
offset_top = 32.0
offset_right = 576.0
offset_bottom = 608.0
script = ExtResource("1_6sk50")

[node name="Study_terms" type="Button" parent="."]
offset_left = 64.0
offset_right = 288.0
offset_bottom = 32.0
theme = ExtResource("1_wa2kj")
text = "Study"
script = ExtResource("2_bicyd")

[node name="new_set" type="Button" parent="."]
offset_left = 64.0
offset_top = 320.0
offset_right = 1088.0
offset_bottom = 344.0
theme = ExtResource("1_wa2kj")
text = "Add New"
script = ExtResource("3_i27n6")

[node name="Add_def" type="TextEdit" parent="."]
offset_left = 576.0
offset_top = 344.0
offset_right = 1088.0
offset_bottom = 384.0
placeholder_text = "Enter Definition"

[node name="Add_term" type="TextEdit" parent="."]
offset_left = 64.0
offset_top = 344.0
offset_right = 576.0
offset_bottom = 384.0
placeholder_text = "Enter Term
"

[connection signal="pressed" from="Study_terms" to="Study_terms" method="_on_pressed"]
[connection signal="pressed" from="new_set" to="." method="_on_new_set_pressed"]
[connection signal="pressed" from="new_set" to="Terms" method="_on_new_set_pressed"]
[connection signal="toggled" from="new_set" to="Study_terms" method="_on_new_set_toggled"]
